# AstraGuard-AI-Apertre-3.0

./: .coverage  .gitignore  CHANGES.md  COMPLETION_SUMMARY_410.md  COMPLETION_SUMMARY_411.md  COMPLETION_SUMMARY_412.md  COMPLETION_SUMMARY_413.md  COMPLETION_SUMMARY_414.md  COMPLETION_SUMMARY_415.md  COMPLETION_SUMMARY_492.md  COMPLETION_SUMMARY_493.md  COMPLETION_SUMMARY_495.md  COMPLETION_SUMMARY_496.md  CONTRIBUTING.md  DELIVERY_REPORT_414.md  DELIVERY_REPORT_415.md  DELIVERY_SUMMARY_413.md  DEVELOPER.md  FINAL_FIX_SUMMARY.md  FIXES_COMPLETED_SESSION.md  FRONTEND.md  IMPLEMENTATION_REPORT_409.md  IMPLEMENTATION_REPORT_412.md  IMPLEMENTATION_REPORT_413.md  IMPLEMENTATION_REPORT_415.md  INDEX_413.md  ISSUE_410_IMPLEMENTATION.md  ISSUE_411_IMPLEMENTATION.md  ISSUE_414_IMPLEMENTATION.md  ISSUE_485_COMPLETION.md  ISSUE_86_COMPLETION_REPORT.md  PR_405_SUMMARY.md  PR_406_SUMMARY.md  PR_408_SUMMARY.md  PR_409_SUMMARY.md  README.md  RELEASE_NOTES_v3.0.md  SESSION_COMPLETION_API_TESTS_PASSING.md  STARTUP_GUIDE.md  TODO.md  (+19 more)
.github/workflows/: canary-deploy.yml  chaos-nightly.yml  e2e-contact.yml  e2e-pipeline.yml  release-validation.yml  swarm-sim.yml
anomaly/: anomaly_detector.py
anomaly_agent/: phase_aware_handler.py
api/: contact.py  contact_app.py  models.py  service.py
backend/: __init__.py  distributed_coordinator.py  fallback_manager.py  health_monitor.py  main.py  recovery_orchestrator.py  recovery_orchestrator_enhanced.py  redis_client.py
benchmarks/: bench_condition_parser.py  bench_fallback.py  cache_benchmarks.py
config/: config_loader.py  requirements-ci.txt  requirements-dev.txt  requirements-test.txt  requirements.txt
core/: circuit_breaker.py  component_health.py  resource_monitor.py  secrets.py
docs/: AUTH_SECRETS.md  CACHE_PERF.md  CHAOS_FAILURE_MATRICES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INDEX_412.md  PROFILING_BENCHMARKS.md  QUICKSTART_412.md  TECHNICAL.md  action-scopes.md  admin_contact.html  chaos-engineering.md  consensus-protocol.md  e2e-recovery-pipeline.md  index.html  leader-election-protocol.md  policy-arbitration.md  role-reassignment.md  safety-simulation.md  swarm-decision-loop.md  swarm-memory.md  swarm-simulator.md
examples/: brownout_demo_491.py  hil_demo_485.py  power_demo_488.py
infra/: docker-compose.swarm.yml
memory_engine/: memory_store.pkl  memory_store.py
pages/: feedback_review.py
security/: secrets_adapter.py
security_engine/: predictive_maintenance.py
src/: api.py  app.py  cli.py
state_machine/: mission_phase_policy_engine.py
tests/: conftest.py  test_api.py  test_contact.py  test_core_circuit_breaker.py  test_health_monitor_integration.py  test_memory_store.py  test_resource_monitor.py  test_secrets.py  test_secrets_adapter.py
tools/: __init__.py
(+484 files in other folders)
