[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astraguard-ai"
version = "1.0.0"
description = "AI-powered satellite security and anomaly detection platform"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AstraGuard AI Team"}
]
keywords = ["satellite", "security", "anomaly-detection", "ai", "telemetry", "monitoring"]

[project.urls]
Repository = "https://github.com/purvanshjoshi/AstraGuard-AI"
Documentation = "https://github.com/purvanshjoshi/AstraGuard-AI#readme"

[tool.setuptools]
packages = ["api", "backend", "config", "core", "classifier", "anomaly", "anomaly_agent", "astraguard", "state_machine", "memory_engine"]

[tool.setuptools.package-data]
astraguard = ["*.yaml", "*.yml"]
config = ["*.yaml", "*.yml"]

[tool.poetry]
name = "astraguard-ai"
version = "1.0.0"
description = "AI-powered satellite security and anomaly detection platform"

[tool.poetry.scripts]
astraguard = "run_api:main"

[tool.vercel]
functions = { "api/index.py" = { memory = 3008, maxDuration = 30 } }

[project.scripts]
app = "app:app"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["backend.*", "api.*"]
disallow_untyped_defs = false
warn_unused_ignores = true

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
  | __pycache__
  | \.next
  | frontend
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
skip = [".venv", "frontend", ".next", "__pycache__"]
known_first_party = ["backend", "api", "config", "core", "anomaly", "classifier"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
  ".eggs",
  ".git",
  ".mypy_cache",
  ".venv",
  "build",
  "dist",
  "__pycache__",
  ".next",
  "frontend",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line too long (handled by black)
  "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B", "C4"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
